Update handle well regex replace

--- a/translate_json/index.html
+++ b/translate_json/index.html
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '925871473';
+    const serviceWorkerVersion = "1916259639";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
